# e6b

./: README.md  changelog.md  default.nix  e6b.cabal  e6b.nix
ci/: ci.nix  jobsets.json  jobsets.nix
src/: M.hs  Main.hs
src-exe/: Main.hs
src/Data/Aviation/: E6B.hs
src/Data/Aviation/E6B/: CLI.hs  DensityAltitude.hs  DensityAltitudePressureAltitude.hs  DistanceUnit.hs  IndicatedAirspeed.hs  IndicatedAirspeedPressureAltitudeTemperature.hs  IndicatedAltitude.hs  IndicatedAltitudeQNHTemperature.hs  Preferences.hs  PressureAltitude.hs  PressureUnit.hs  QNH.hs  Temperature.hs  TemperatureUnit.hs  TrueAirspeed.hs  TrueAirspeedDensityAltitude.hs  VelocityUnit.hs
test/: Main.hs
