name:                e6b
version:             0.1.0.0
synopsis:            E6B Flight Computer functions
description:         E6B Flight Computer functions
homepage:            https://github.com/qfpl/e6b
license:             BSD3
license-file:        LICENCE
author:              QFPL
maintainer:          Queensland Functional Programming Lab oᴉ˙ldɟb@llǝʞsɐɥ
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Data, Aviation
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10
homepage:            https://github.com/qfpl/e6b
bug-reports:         https://github.com/qfpl/e6b/issues
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1

source-repository   head
  type:             git
  location:         git@github.com:qfpl/e6b.git

library
  exposed-modules:    Data.Aviation.E6B
                    , Data.Aviation.E6B.DensityAltitude
                    , Data.Aviation.E6B.DensityAltitudePressureAltitude
                    , Data.Aviation.E6B.DistanceUnit
                    , Data.Aviation.E6B.IndicatedAirspeed
                    , Data.Aviation.E6B.IndicatedAirspeedPressureAltitudeTemperature
                    , Data.Aviation.E6B.IndicatedAltitude
                    , Data.Aviation.E6B.IndicatedAltitudeQNHTemperature
                    , Data.Aviation.E6B.PressureAltitude 
                    , Data.Aviation.E6B.PressureUnit
                    , Data.Aviation.E6B.QNH
                    , Data.Aviation.E6B.Temperature
                    , Data.Aviation.E6B.TemperatureUnit
                    , Data.Aviation.E6B.TrueAirspeed
                    , Data.Aviation.E6B.TrueAirspeedDensityAltitude
                    , Data.Aviation.E6B.VelocityUnit

  build-depends:      base >=4.8 && <4.11
                    , lens >=4.15 && <4.16
                    , papa >= 0.3 && < 0.4
                    , parsers
                    , parsec
                    , optparse-applicative
                    , mtl
                    
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable e6b
  default-language:
                    Haskell2010

  hs-source-dirs:
                    src

  main-is:
                    Main.hs

  build-depends:
                      base >=4.8 && <4.11                    
                    , lens >=4.15 && <4.16
                    , papa >= 0.3 && < 0.4
                    , parsers
                    , parsec
                    , optparse-applicative
                    , mtl
                    , ansi-terminal

  ghc-options:
                    -Wall

  other-modules:
                    Data.Aviation.E6B

test-suite          tests
  type:
                    exitcode-stdio-1.0

  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:      base >=4.8 && <4.11
                    , ansi-wl-pprint >=0.6    && <0.7
                    , hedgehog       >=0.5    && <0.6
                    , tasty          >=0.11   && <0.12
                    , tasty-hspec    >=1.1    && <1.2
                    , papa           >=0.3    && <0.4
                    , parsec         >=3.1    && <3.2
                    , parsers        >=0.12.3 && <0.13
                    , pretty         >=1.1    && <1.2
                    , text           >=1.2    && <1.3
                    , tasty-hedgehog >=0.1    && <0.2
                    , tasty-hunit    >=0.9    && <0.10
                    , e6b

  ghc-options:
                    -Wall
                    -threaded

  default-extensions: 
                    NoImplicitPrelude

  hs-source-dirs:
                    test
